finished basic tablet layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1>On</h1>
     <h1>Demand</h1>
   
-    <a href="#">Get Started</a>
+    <p class="getstartedbutton">Get Started</p>
   </section>
   <section class="img1">
     <img src="img/header-img.png" alt="Image of a code snippet.">
