lined up text on page

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <div class="section2">
   <section class="section2a">
-    <h1>Innovation</h1>
-    <h1>On</h1>
-    <h1>Demand</h1>
+    <h1 class="iod">Innovation</h1>
+    <h1 class="iod">On</h1>
+    <h1 class="iod">Demand</h1>
   
     <p class="getstartedbutton">Get Started</p>
   </section>
